css/webflow-style.css
/* ... */
.f-container-regular-2 {
  width: 100%;
  max-width: 1140px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.f-footer-regular {
  background-color: var(--flowui-component-library--white);
  padding: 64px 5%;
  position: relative;
}

.f-footer-vertical-divider {
  background-color: var(--flowui-component-library--grey-300);
  width: 1px;
  height: 16px;
}

.f-footer-menu {
  grid-column-gap: 24px;
  flex: none;
  align-items: center;
  display: flex;
}

.f-footer-brand {
  align-items: center;
  display: flex;
}

.f-footer-horizontal-divider {
  background-color: var(--flowui-component-library--grey-300);
  width: 100%;
  height: 1px;
  margin-top: 24px;
  margin-bottom: 24px;
}

.f-icon-regular-2 {
  justify-content: center;
  align-items: center;
  width: 24px;
  height: 24px;
  transition: color .2s;
  display: flex;
}

.f-footer-social {
  background-color: var(--flowui-component-library--gray-200);
  color: var(--flowui-component-library--gray-900);
  border-radius: 100px;
  justify-content: center;
  align-items: center;
  width: 48px;
  height: 48px;
  transition: color .3s;
  display: flex;
}

.f-footer-social:hover {
  color: var(--flowui-component-library--primary-base);
}

.f-footer-social-group {
  grid-column-gap: 16px;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.f-footer-social-row-large {
  flex-direction: column;
  align-items: flex-start;
  margin-left: 60px;
  display: flex;
}

.f-footer-group {
  justify-content: flex-end;
  align-items: center;
  display: flex;
}

.f-container-large {
  width: 100%;
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.f-footer-small {
  background-color: var(--flowui-component-library--white);
  margin-top: 0;
  padding: 32px 5%;
  position: relative;
}

.heading-29, .heading-30 {
  font-family: Montserrat, sans-serif;
  font-weight: 500;
}

.div-block-50 {
  height: 150px;
}

.f-breadcrumb-link {
  color: var(--flowui-component-library--grey-600);
  letter-spacing: -.02em;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  text-decoration: none;
  transition: color .3s;
}

.f-breadcrumb-link:hover {
  color: var(--flowui-component-library--primary-base);
}

.f-breadcrumb-link.w--current {
  color: var(--flowui-component-library--gray-900);
}

.f-breadcrumb-seperator {
  color: var(--flowui-component-library--grey-300);
  justify-content: center;
  align-items: center;
  width: 32px;
  height: 32px;
  display: flex;
}

.f-breadcrumb-home-svg {
  color: var(--studioform-library--sf-color--subtle-black-21);
  justify-content: center;
  align-items: center;
  width: 32px;
  height: 32px;
  display: flex;
}

.f-breadcrumb-home {
  color: var(--flowui-component-library--grey-600);
  transition: color .3s;
}

.f-breadcrumb-home:hover {
  color: var(--flowui-component-library--primary-base);
}

.f-breadcrumb-home.w--current {
  color: var(--flowui-component-library--gray-900);
}

.f-breadcrumb-wrapper {
  grid-column-gap: 8px;
  grid-row-gap: 8px;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  padding-left: 0;
  display: flex;
}

.heading-31 {
  margin-top: 60px;
  padding-left: 20px;
  font-family: Akira;
}

.text-block-19 {
  padding-left: 20px;
  font-family: Montserrat, sans-serif;
  font-size: 16px;
  font-weight: 500;
}

.container-17 {
  max-width: 1280px;
  margin-top: 0;
}

.text-field-4, .text-field-5, .text-field-6, .select-field, .text-field-7, .textarea {
  border-radius: 20px;
}

.div-block-51 {
  background-image: url("../images/neighbourhood.jpg");
  background-position: 50%;
  background-repeat: repeat-y;
  background-size: cover;
  background-attachment: scroll;
  border-radius: 250px;
  width: 500px;
  height: 500px;
  margin-top: -40px;
}

.submit-button-2 {
  text-align: center;
  background-color: #222;
  border-radius: 20px;
  align-self: center;
  width: 80%;
  margin-top: 40px;
}

.homebanner {
  height: 100vh;
  position: relative;
}

.background-video {
  height: 100%;
}

.navbar-3 {
  background-color: #ddd0;
  display: block;
  position: sticky;
  top: 0;
}

.featuredlistings {
  flex-flow: column;
  align-items: center;
  height: auto;
  margin-top: 46px;
  margin-bottom: 0;
  display: flex;
  position: static;
  overflow-x: hidden;
}

.heading-32 {
  color: #383838;
  font-family: Akira Expanded;
}

.navbar-4 {
  background-color: #ddd0;
  padding-top: 20px;
}

.image-36 {
  max-width: 80%;
}

.image-37 {
  width: 35vw;
  margin-left: 0;
  margin-right: 0;
  position: absolute;
  inset: 50% auto auto;
}

.homebgvideo {
  width: 100%;
  height: 100%;
  position: absolute;
}

.image-38 {
  width: 40vw;
  display: block;
  position: absolute;
  inset: 50% auto 0%;
}

.bannertextblock {
  z-index: 1;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  flex-flow: column;
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  justify-content: center;
  align-items: center;
  width: 30vw;
  height: auto;
  margin-left: 0;
  margin-right: 0;
  display: flex;
  position: absolute;
  top: 62%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.realtormksbanner {
  width: 100%;
  display: inline-block;
}

.gradient {
  width: 100%;
  height: 100%;
  display: inline-block;
  position: absolute;
}

.button-3 {
  color: #333;
  text-align: center;
  letter-spacing: 2px;
  background-color: #3898ec00;
  border: 2px solid #333;
  border-radius: 50px;
  justify-content: center;
  align-items: center;
  width: 80%;
  height: 50px;
  margin-top: 27px;
  font-family: PT Sans, sans-serif;
  font-size: 18px;
  font-weight: 700;
  display: flex;
  position: static;
  top: auto;
  bottom: 194px;
  left: 50%;
}

.button-3.listingbutton {
  color: #ebebeb;
  border-color: #e2e2e2;
  height: 45px;
  margin-top: 16px;
  font-family: Montserrat, sans-serif;
  font-weight: 500;
}

.button-3.hb2button {
  font-family: Montserrat, sans-serif;
  font-size: 16px;
}
/* ... */

